Aress7/src/objects/ProductRequired.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Products Required</relationshipLabel>
        <relationshipName>Products_Required</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product2.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOLI_OppLineItem_Id__c</fullName>
        <externalId>true</externalId>
        <label>WOLI OppLineItem Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_OppLineItem_Id__c</fullName>
        <externalId>true</externalId>
        <label>WO OppLineItem Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>